[tool.poetry]
name = "tutorial-v2"
version = "0.1.0"
description = ""
authors = ["vcokltfre <vcokltfre@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
markdown-link-attr-modifier = "^0.2.0"
taskipy = "^1.9.0"
PyYAML = "^6.0"
mkdocs-material = "^8.1.3"
mkdocs-macros-plugin = "^0.6.3"
mkdocs-material-extensions = "^1.0.3"
tqdm = "^4.62.3"
mkdocs-git-revision-date-localized-plugin = "^0.11.1"
mkdocs = "^1.2.3"

[tool.taskipy.tasks]
build = "mkdocs build"
serve = "mkdocs serve --dev-addr=127.0.0.1:5000"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
